Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13966

[C++] Comparison kernel(s) for decimals

Details

    Description

      Even decimal-decimal comparisons return an error:

      > Scalar$create(1.5)$cast(decimal(15, 2)) > Scalar$create(1.1)$cast(decimal(15, 2))
      Error: NotImplemented: Function greater has no kernel matching input types (scalar[decimal128(15, 2)], scalar[decimal128(15, 2)])
      

      Ideally, we would also be able to (autocast in order to) compare decimal-float or decimal-integer.

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              jonkeane Jonathan Keane
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m

                  Slack

                    Issue deployment