ARROW-13966: [C++] Fix int-to-decimal promotion