cpp/src/arrow/compute/kernels/scalar_compare_test.cc
@@ -457,9 +457,65 @@ template <typename ArrowType>
 class TestCompareDecimal : public ::testing::Test {};
 TYPED_TEST_SUITE(TestCompareDecimal, DecimalArrowTypes);
 
-TYPED_TEST(TestCompareDecimal, ArrayScalar) {}
+TYPED_TEST(TestCompareDecimal, ArrayScalar) {
+  auto ty = std::make_shared<TypeParam>(3, 2);
 
-TYPED_TEST(TestCompareDecimal, ScalarArray) {}
+  std::vector<std::pair<std::string, std::string>> cases = {
+      std::make_pair("equal", "[1, 0, 0, null]"),
+      std::make_pair("not_equal", "[0, 1, 1, null]"),
+      std::make_pair("less", "[0, 0, 1, null]"),
+      std::make_pair("less_equal", "[1, 0, 1, null]"),
+      std::make_pair("greater", "[0, 1, 0, null]"),
+      std::make_pair("greater_equal", "[1, 1, 0, null]"),
+  };
+
+  auto lhs = ArrayFromJSON(ty, R"(["1.23", "2.34", "-1.23", null])");
+  auto lhs_float = ArrayFromJSON(float64(), "[1.23, 2.34, -1.23, null]");
+  auto lhs_intlike = ArrayFromJSON(ty, R"(["1.00", "2.00", "-1.00", null])");
+  auto rhs = ScalarFromJSON(ty, R"("1.23")");
+  auto rhs_float = ScalarFromJSON(float64(), "1.23");
+  auto rhs_int = ScalarFromJSON(int64(), "1");
+  for (const auto& op : cases) {
+    const auto& function = op.first;
+    const auto& expected = op.second;
+
+    SCOPED_TRACE(function);
+    CheckScalarBinary(function, lhs, rhs, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs_float, rhs, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs, rhs_float, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs_intlike, rhs_int, ArrayFromJSON(boolean(), expected));
+  }
+}
+
+TYPED_TEST(TestCompareDecimal, ScalarArray) {
+  auto ty = std::make_shared<TypeParam>(3, 2);
+
+  std::vector<std::pair<std::string, std::string>> cases = {
+      std::make_pair("equal", "[1, 0, 0, null]"),
+      std::make_pair("not_equal", "[0, 1, 1, null]"),
+      std::make_pair("less", "[0, 1, 0, null]"),
+      std::make_pair("less_equal", "[1, 1, 0, null]"),
+      std::make_pair("greater", "[0, 0, 1, null]"),
+      std::make_pair("greater_equal", "[1, 0, 1, null]"),
+  };
+
+  auto lhs = ScalarFromJSON(ty, R"("1.23")");
+  auto lhs_float = ScalarFromJSON(float64(), "1.23");
+  auto lhs_int = ScalarFromJSON(int64(), "1");
+  auto rhs = ArrayFromJSON(ty, R"(["1.23", "2.34", "-1.23", null])");
+  auto rhs_float = ArrayFromJSON(float64(), "[1.23, 2.34, -1.23, null]");
+  auto rhs_intlike = ArrayFromJSON(ty, R"(["1.00", "2.00", "-1.00", null])");
+  for (const auto& op : cases) {
+    const auto& function = op.first;
+    const auto& expected = op.second;
+
+    SCOPED_TRACE(function);
+    CheckScalarBinary(function, lhs, rhs, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs_float, rhs, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs, rhs_float, ArrayFromJSON(boolean(), expected));
+    CheckScalarBinary(function, lhs_int, rhs_intlike, ArrayFromJSON(boolean(), expected));
+  }
+}
 
 TYPED_TEST(TestCompareDecimal, ArrayArray) {
   auto ty = std::make_shared<TypeParam>(3, 2);
@@ -477,19 +533,18 @@ TYPED_TEST(TestCompareDecimal, ArrayArray) {
       ty, R"(["1.23", "1.23", "2.34", "-1.23", "-1.23", "1.23", "1.23", null])");
   auto lhs_float =
       ArrayFromJSON(float64(), "[1.23, 1.23, 2.34, -1.23, -1.23, 1.23, 1.23, null]");
+  auto lhs_intlike = ArrayFromJSON(
+      ty, R"(["1.00", "1.00", "2.00", "-1.00", "-1.00", "1.00", "1.00", null])");
   auto rhs = ArrayFromJSON(
       ty, R"(["1.23", "2.34", "1.23", "-1.23", "1.23", "-1.23", null, "1.23"])");
   auto rhs_float =
       ArrayFromJSON(float64(), "[1.23, 2.34, 1.23, -1.23, 1.23, -1.23, null, 1.23]");
-  auto lhs_intlike = ArrayFromJSON(
-      ty, R"(["1.00", "1.00", "2.00", "-1.00", "-1.00", "1.00", "1.00", null])");
-  auto rhs_int = ArrayFromJSON(ty, R"([1, 2, 1, -1, 1, -1, null, 1])");
+  auto rhs_int = ArrayFromJSON(int64(), "[1, 2, 1, -1, 1, -1, null, 1]");
   for (const auto& op : cases) {
     const auto& function = op.first;
     const auto& expected = op.second;
 
     SCOPED_TRACE(function);
-
     CheckScalarBinary(function, ArrayFromJSON(ty, R"([])"), ArrayFromJSON(ty, R"([])"),
                       ArrayFromJSON(boolean(), "[]"));
     CheckScalarBinary(function, ArrayFromJSON(ty, R"([null])"),
